Spell Check hehe

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <div class="row topLayer justify-content-around align-items-center">
             <div class="instuctions">
                 <h1> Fakiemon </h1>
-                <h3>Instructiosn : </h3>
+                <h3>Instructions : </h3>
                 <p> - Choose your Fakiemon to follow you into battle </p>
                 <p> - Some Fakiemon types are stonger than others </p>
-                <p> - Each time your fakiemon win a battle it Gain +16 health and +16 Attack Power </p>
+                <p> - Each time your fakiemon wins a battle it Gain +20 health and +20 Attack Power </p>
             </div>
         </div>
         <div class="row controls justify-content-around align-items-center ">
